done for now with README. Still requires the Python part.

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,8 +31,8 @@ This repository contains the following code scripts:
 
 * `scripts/process_compute-reddit-volume.R` and `process_compute-twitter-volume.R` -- R scripts that start the dataset files (`data/reddit.csv.xz`, `data/twitter.csv.1.xz` and `data/twitter.csv.2.xz`), and compute the number of posts, links, active domains, HHI and link uniqueness. Required for plotting `plots/Fig1.pdf`;
 * `scripts/process_diversity-decrease.R` -- R scripts that start the dataset files and computes the diversity reduction indicators: skewness, kurtosis and PL fits. Required for plotting `plots/Fig1.pdf` and plotting `plots/Fig3.pdf` (**Note:** running this script requires significant memory);
-* `scripts/process_twelve-functions-competitors.R` -- 
-* `scripts/process_temporal-analysis.R` -- 
+* `scripts/process_twelve-functions-competitors.R` -- R scripts that start the dataset files and the list of competitors in the 12 selected functions, and builds the volume of attention for each function. Required for `plots/Fig5.pdf`;
+* `scripts/process_temporal-analysis.R` -- R scripts that start the dataset files and build the total volume of attention received by the temporal cohorts (domains that appear in particular years). Required for `plots/Fig6.pdf`;
 * `scripts/plot_fig1.R`, `scripts/plot_fig3.R`, `scripts/plot_fig5.R`, `scripts/plot_fig6.R` -- R script to plot the different figures in the paper;
 * `scripts/utils.R` -- additional functions for reading, writing data and plotting.
 
@@ -42,29 +42,20 @@ The following data and plots is also available:
 * `data/twitter.csv.1.xz` and `data/twitter.csv.2.xz` -- contain the monthly counts of links towards domains in Twitter (CSV compressed using LZMA). Lines are domain names, columns are months. The data frame has been split into two halves to respect GitHub's maximum file limits. The files need to be loaded individually, and concatenated at the level of rows. For example, in `R` do:
 ```{r, eval=FALSE}
 # note: this might take some time to run, and require quite a bit of memory
+library(tidyverse)
 dataset <- bind_rows(read_csv("data/twitter.csv.1.xz"),
                      read_csv("data/twitter.csv.2.xz") )
 ```
-
-<!-- * `plots/vocation-map-static.pdf` -- a static version of the Vocation Map.  -->
-<!-- * `plots/vocation-map-interactive.html` -- the interactive version of the Vocation Map. Also available at http://bit.ly/vocation-map-interactive . -->
-<!-- * `plots/confusion-heatmap-dendogram.pdf` -- the confusion map for the XGBoost classifier (based on `data/prediction-results/*`) -->
+* `data/commoncrawl1.csv.xz` and `data/commoncrawl2.csv.xz` -- contain the PageRank for the top most linked **2.8 million websites**. Similar to the Twitter dataset, CommonCrawl has been split into two and can be merged via:
+```{r, eval=FALSE}
+# note: this might take some time to run, and require quite a bit of memory
+library(tidyverse)
+dataset <- bind_rows(read_csv("data/commoncrawl1.csv.xz"),
+                     read_csv("data/commoncrawl2.csv.xz") )
+```
 
 Here is an example of the generated Figure 1 from the main text, obtained using `make fig1`:
 ![A static version of the Vocation Map.](plots/Fig1.png)
-<!-- ![Confusion map showing that even when the prediction is wrong, it is still pretty good.](plots/confusion-heatmap-dendogram.png) -->
-
-<!-- Additional data file: -->
-<!-- === -->
-
-<!-- The following files cannot be publicly shared due to the Twitter's and IBM Watson's Terms of Service. -->
-<!-- However, these files could be provided privately upon request, requests are evaluated at a case-by-case basis. -->
-
-<!-- * `data/all_users_data.csv.xz` -- contains the psychological profiles of all 128,278 users in our study; -->
-<!-- * `data/10_professions_data.csv.xz` -- contains the Big5 and the personal values (10 features) for 38,073 users in the occupation prediction part of the paper; -->
-<!-- * `data/10_professions_data_big5.csv.xz` -- contains solely the Big5 traits for the 38,073 users above (useful for the ablation study); -->
-<!-- * `data/10_professions_data_values.csv.xz` -- contains solely the personal values for the 38,073 users above (useful for the ablation study). -->
-
 
 License
 ===
