--- a/README.Rmd
+++ b/README.Rmd
@@ -24,6 +24,15 @@ Usage examples:
 * `make clean` -- removes all generated files (`*.rds`, `*.dat`);
 * `make all` -- reproduces all analysis and all plots. **WARNING**: this can take a while to execute, and might require a machine with significant memory.
 
+**Note:** producing some of the figures requires `python`. We recommend the [anaconda](https://anaconda.org/) installation. 
+You can install all required packages in a separate environment by using (in a terminal):
+```{bash, eval=FALSE}
+# note: this will take a while to install
+conda create --name online-diversity -c plotly python=3 numpy plotly seaborn matplotlib pandas notebook backports.lzma psutil requests plotly-orca
+source activate online-diversity
+pip install powerlaw
+```
+
 Repository content:
 ===
 
