work on python figs.

--- a/scripts/plot_fig2.ipynb
+++ b/scripts/plot_fig2.ipynb
@@ -44,8 +44,8 @@
     "df_reddit_top_percent_trend = df_reddit_top_percent_trend.apply(pd.to_numeric)\n",
     "\n",
     "# Load Twitter Data\n",
-    "df_twitter1 = pd.read_csv('twitter.csv.1.xz')\n",
-    "df_twitter2 = pd.read_csv('twitter.csv.2.xz')\n",
+    "df_twitter1 = pd.read_csv('../data/twitter.csv.1.xz')\n",
+    "df_twitter2 = pd.read_csv('../data/twitter.csv.2.xz')\n",
     "df_twitter = pd.concat([df_twitter1, df_twitter2], axis = 0)\n",
     "df_twitter_plot = df_twitter[['Domain']]\n",
     "df_twitter.set_index('Domain', inplace = True)\n",
@@ -74,8 +74,8 @@
     "df_twitter_top_percent_trend = df_twitter_top_percent_trend.apply(pd.to_numeric)\n",
     "\n",
     "# Load CommonCrawl Data\n",
-    "df_cc1 = pd.read_csv('commoncrawl1.csv.xz')\n",
-    "df_cc2 = pd.read_csv('commoncrawl2.csv.xz')\n",
+    "df_cc1 = pd.read_csv('../data/commoncrawl1.csv.xz')\n",
+    "df_cc2 = pd.read_csv('../data/commoncrawl2.csv.xz')\n",
     "df_cc = pd.concat([df_cc1, df_cc2], axis = 0)\n",
     "\n",
     "timeline = df_cc.columns.tolist()[1:]\n",
@@ -133,7 +133,7 @@
     "frame3.set_edgecolor('white')\n",
     "plt.tight_layout()\n",
     "\n",
-    "fig_trend.savefig('Fig2.pdf')\n",
+    "fig_trend.savefig('../plots/Fig2.pdf')\n",
     "fig_trend.show()"
    ]
   },
@@ -147,21 +147,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.18"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
