--- a/scripts/plot_fig4.ipynb
+++ b/scripts/plot_fig4.ipynb
@@ -30,7 +30,7 @@
     "plt.rcParams['figure.dpi'] = 300\n",
     "\n",
     "# Load Reddit Data\n",
-    "df_reddit = pd.read_csv('reddit.csv.xz')\n",
+    "df_reddit = pd.read_csv('../data/reddit.csv.xz')\n",
     "df_reddit_plot = df_reddit[['Domain']]\n",
     "df_reddit.set_index('Domain', inplace = True)\n",
     "\n",
@@ -57,8 +57,8 @@
     "df_reddit_top_percent_trend = df_reddit_top_percent_trend.apply(pd.to_numeric)\n",
     "\n",
     "# Load Twitter Data\n",
-    "df_twitter1 = pd.read_csv('twitter.csv.1.xz')\n",
-    "df_twitter2 = pd.read_csv('twitter.csv.2.xz')\n",
+    "df_twitter1 = pd.read_csv('../data/twitter.csv.1.xz')\n",
+    "df_twitter2 = pd.read_csv('../data/twitter.csv.2.xz')\n",
     "df_twitter = pd.concat([df_twitter1, df_twitter2], axis = 0)\n",
     "df_twitter_plot = df_twitter[['Domain']]\n",
     "df_twitter.set_index('Domain', inplace = True)\n",
@@ -123,7 +123,7 @@
     "frame5.set_edgecolor('white')\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig_ccdf.savefig('Fig4.pdf')\n",
+    "fig_ccdf.savefig('../plots/Fig4.pdf')\n",
     "fig_ccdf.show()"
    ]
   },
@@ -151,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
