--- a/scripts/plot_S3.ipynb
+++ b/scripts/plot_S3.ipynb
@@ -30,7 +30,7 @@
     "plt.rcParams['figure.dpi'] = 300\n",
     "\n",
     "# Load Reddit Data\n",
-    "df_reddit = pd.read_csv('reddit.csv.xz')\n",
+    "df_reddit = pd.read_csv('../data/reddit.csv.xz')\n",
     "df_reddit_plot = df_reddit[['Domain']]\n",
     "df_reddit.set_index('Domain', inplace = True)\n",
     "\n",
@@ -43,8 +43,8 @@
     "        \n",
     "\n",
     "# Load Twitter Data\n",
-    "df_twitter1 = pd.read_csv('twitter.csv.1.xz')\n",
-    "df_twitter2 = pd.read_csv('twitter.csv.2.xz')\n",
+    "df_twitter1 = pd.read_csv('../data/twitter.csv.1.xz')\n",
+    "df_twitter2 = pd.read_csv('../data/twitter.csv.2.xz')\n",
     "df_twitter = pd.concat([df_twitter1, df_twitter2], axis = 0)\n",
     "df_twitter_plot = df_twitter[['Domain']]\n",
     "df_twitter.set_index('Domain', inplace = True)\n",
@@ -95,7 +95,7 @@
     "frame7.set_edgecolor('white')\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig_ccdf_comparison.savefig('FigS3.pdf')\n",
+    "fig_ccdf_comparison.savefig('../plots/FigS3.pdf')\n",
     "fig_ccdf_comparison.show()"
    ]
   },
@@ -123,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
