--- a/README.Rmd
+++ b/README.Rmd
@@ -43,7 +43,8 @@ This repository contains the following code scripts:
 * `scripts/process_twelve-functions-competitors.R` -- R scripts that start the dataset files and the list of competitors in the 12 selected functions, and builds the volume of attention for each function. Required for `plots/Fig5.pdf`;
 * `scripts/process_temporal-analysis.R` -- R scripts that start the dataset files and build the total volume of attention received by the temporal cohorts (domains that appear in particular years). Required for `plots/Fig6.pdf`;
 * `scripts/plot_fig1.R`, `scripts/plot_fig3.R`, `scripts/plot_fig5.R`, `scripts/plot_fig6.R` -- R script to plot the different figures in the paper;
-* `scripts/utils.R` -- additional functions for reading, writing data and plotting.
+* `scripts/plot_fig2.ipynb`, `scripts/plot_fig4.ipynb`, `scripts/plot_fig7.ipynb`, `scripts/plot_figS3ipynb` -- `Python` jupyter notebooks to plot the different figures in the paper;
+* `scripts/utils.R` -- additional R functions for reading, writing data and plotting.
 
 The following data and plots is also available:
 
@@ -62,6 +63,7 @@ library(tidyverse)
 dataset <- bind_rows(read_csv("data/commoncrawl1.csv.xz"),
                      read_csv("data/commoncrawl2.csv.xz") )
 ```
+* `data/Tesla_data.csv.xz` -- the case study data of the connection between social media attention and Enterprise Value for Tesla.
 
 Here is an example of the generated Figure 1 from the main text, obtained using `make fig1`:
 ![A static version of the Vocation Map.](plots/Fig1.png)
